<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/time_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/author_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname_placeholder"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/message_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:text="@string/lorem_ipsum_md" />
    </LinearLayout>
</LinearLayout>